added style.css and some pages/page links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,9 @@
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/publications.html">Publications</a></li>
-        <li><a href="/projects.html">Projects</a></li>
-        <li><a href="/about.html">About</a></li>
+        <li><a href="/teaching.html">Teaching</a></li>
+        <li><a href="/cv.html">Curriculum Vitae</a></li>
+        <li><a href="/random_stuff.html">Random facts</a></li>
       </ul>
     </nav>
   </header>
