updated personal page information

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,13 +9,15 @@
 <body>
   <div class="layout">
     <aside class="profile-card">
-      <img src="/assets/profile.jpg" alt="Profile photo" class="avatar">
-      <h1>Your Name</h1>
-      <p>PhD Student @ University<br>Supervisor: Dr. Someone</p>
+      <img src="images/Kathi_small.jpg" alt="Profile photo" class="avatar">
+      <h1>Katharina Stengg</h1>
+      <p>PhD Student @ <a href="https://www.aau.at/en">University of Klagenfurt</a>
+        <br>Supervisor: <a href="https://pinzger.github.io">Prof. Dr. Martin Pinzger</a>
+      </p>
       <ul class="contact-info">
-        <li><strong>Email:</strong> your.email@example.com</li>
-        <li><strong>Phone:</strong> +123 456 7890</li>
-        <li><strong>Location:</strong> Your City, Country</li>
+        <li><strong>Email:</strong> katharina.stengg@aau.at</li>
+        <!--<li><strong>Phone:</strong> +123 456 7890</li>-->
+        <li><strong>Location:</strong> Klagenfurt, Austria</li>
       </ul>
     </aside>
 
