color change for navbar

--- a/assets/style.css
+++ b/assets/style.css
@@ -28,7 +28,7 @@ body {
     display: flex;
     gap: 1.5rem;
     list-style: none;
-    background: #334155;
+    background: #C75C6F;
     padding: 1rem;
     border-radius: 12px;
   }
